--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -3,8 +3,7 @@
 html,
 body {
   height: 100%;
-  display: grid;
-  background-color: #414141;
+  background-color: #efefef;
 }
 
 h1 {
@@ -39,6 +38,58 @@ nav#navbar {
   color: rgba(255, 255, 255, 0.75);
 }
 
+.nav-placeholder {
+  height: 45px;
+}
+
+footer {
+  padding: 1rem 0;
+  background-color: #202020;
+  color: white;
+}
+
+footer p {
+  margin: 0;
+  text-align: center;
+}
+
+footer p,
+footer a {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 0.75rem;
+}
+
+footer a,
+footer a:hover {
+  color: #00ffff;
+}
+
+footer .footer-list {
+  max-width: 26rem;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+}
+
+footer .footer-list ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 0 0.5em -1px;
+  list-style: none;
+  padding-left: 0;
+}
+
+footer .footer-list li {
+  line-height: 0.75em;
+  flex: 1 0 auto;
+  margin: 0.25em 0;
+  padding: 0 0.5rem;
+  text-align: center;
+  border-left: 1px solid white;
+}
+
 .cover {
   opacity: 1;
   background: unset;
@@ -68,6 +119,7 @@ nav#navbar {
 }
 
 .content {
+  display: grid;
   background-color: #ffcc8d;
 }
 
@@ -107,14 +159,8 @@ nav#navbar {
   -o-background-size: cover;
 }
 
-.footer {
-  background-color: #414141;
-  color: white;
-  text-align: center;
-}
-
-.footer p {
-  margin: 1rem 0;
+.container.m-tb-2rem {
+  margin: 2rem auto;
 }
 
 @media (min-width: 1200px) {
@@ -153,5 +199,11 @@ nav#navbar {
 @media (min-width: 576px) and (max-width: 1199px) {
   .cover {
     margin-top: 56px;
+  }
+}
+
+@media (min-width: 576px){
+  .nav-placeholder {
+    height: 56px;
   }
 }
