--- a/home/templates/home/navbar.html
+++ b/home/templates/home/navbar.html
@@ -1,6 +1,5 @@
-<nav id="navbar" class="navbar fixed-top navbar-expand-sm navbar-dark">
-    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+<nav id="navbar" class="navbar fixed-top navbar-expand navbar-dark">
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
