--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="nav-placeholder"></div>
-<div class="container m-tb-2rem">
+<div class="container m-tb-2rem tos-privacy">
     <h1>Privacy Policy for {{ name }}</h1>
     <p>At {{ name }}, accessible from {{ domain }}, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by {{ name }} and how we use it.</p>
     <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us through email at mattmc318@gmail.com</p>
