--- a/home/templates/home/tos.html
+++ b/home/templates/home/tos.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="nav-placeholder"></div>
-<div class="container m-tb-2rem">
+<div class="container m-tb-2rem tos-privacy">
     <h1>Terms and Conditions for {{ name }}</h1>
     <h3>Introduction</h3>
     <p>These Website Standard Terms and Conditions written on this webpage shall manage your use of our website, {{ name }} accessible at {{ domain }}.</p>
