--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,11 +16,13 @@
                 <img src="{% static 'home/img/pills.jpg' %}" alt="pills">
             </div>
             <div class="paragraph col col-md-6 col-sm-12">
+                <div class="gradient-border"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ex sit amet enim tincidunt aliquet vehicula eu neque. Morbi condimentum, odio a interdum interdum, urna velit hendrerit nunc, vitae ornare massa metus nec leo. Sed aliquet feugiat sagittis.</p>
             </div>
         </div>
         <div class="row">
             <div class="paragraph col col-md-6 col-sm-12">
+                <div class="gradient-border"></div>
                 <p class="text-md-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ex sit amet enim tincidunt aliquet vehicula eu neque. Morbi condimentum, odio a interdum interdum, urna velit hendrerit nunc, vitae ornare massa metus nec leo. Sed aliquet feugiat sagittis.</p>
             </div>
             <div class="col col-md-6 d-none d-md-block img">
