Added chevron to home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,6 +8,9 @@
         <h3>Robin McCarthy</h3>
         <h1>The Pharmasseuse</h1>
     </div>
+    <div class="chevron d-none d-xl-block">
+        <h1><i class="fas fa-chevron-down"></i></h1>
+    </div>
 </div>
 <div class="content">
     <div class="container m-tb-2rem">
