--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -156,6 +156,16 @@ footer a:hover {
   background: url("/static/home/img/title_h3_mobile.png") no-repeat center/contain;
 }
 
+.chevron {
+  position: absolute;
+  left: 50%;
+  bottom: 1rem;
+  transform: translateX(-50%);
+  text-align: center;
+  color: #b82d17;
+  cursor: pointer;
+}
+
 .content {
   display: grid;
   background-color: #ffcc8d;
