--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,6 +3,9 @@
 
 {% block content %}
 <div class="nav-placeholder d-xl-none"></div>
+<div class="chevron d-none d-xl-block">
+    <h1><i class="fas fa-chevron-down"></i></h1>
+</div>
 <div class="cover">
     <div class="title">
         <h3>Robin McCarthy</h3>
