--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -31,7 +31,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/navbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/footer.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'home/css/gdpr.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}">
+    <script src="{% static 'home/js/cookies.js' %}"></script>
+    <script src="{% static 'home/js/gdpr.js' %}"></script>
     <script src="{% static 'home/js/script.js' %}"></script>
 </head>
 <body>
@@ -39,5 +42,6 @@
     {% block content %}
     {% endblock %}
     {% include 'home/footer.html' %}
+    {% include 'home/gdpr.html' %}
 </body>
 </html>
