--- a/booking/static/booking/css/style.css
+++ b/booking/static/booking/css/style.css
@@ -31,9 +31,85 @@ html, body {
 }
 
 #calendar {
+  font-family: 'Varela Round', Helvetica, Arial, sans-serif;
   width: 100%;
   height: 60vh;
   background-color: #efefef;
-  border: 1px solid #b7b5b5;
+  border: 1px solid #b5b5b7;
   border-radius: 0.5rem;
+}
+
+#calendar-controls {
+  display: grid;
+  grid-template-columns: 2.5rem calc(100% - 5rem) 2.5rem;
+  height: 2.5rem;
+  background-color: gray;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#calendar-controls .button {
+  padding: 0.5rem;
+  color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+#calendar-controls .button.inactive {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+#calendar-controls .date {
+  padding: 0.5rem;
+  color: white;
+  font-size: 1.5rem;
+}
+
+#calendar-controls .date i {
+  margin-left: 0.5rem;
+  cursor: pointer;
+}
+
+#calendar-content {
+  position: relative;
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  overflow-y: auto;
+}
+
+#calendar-content::-webkit-scrollbar {
+  width: 1rem;
+}
+
+#calendar-content::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 0.375rem rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 0.375rem rgba(0,0,0,0.3);
+}
+
+#calendar-content::-webkit-scrollbar-thumb {
+  background-color: #5b3a94;
+  background: linear-gradient(to bottom, #5b3a94, #17a2b8, #5b3a94);
+  border-radius: 0.5rem;
+}
+
+#calendar-content ol li {
+  height: 4rem;
+  padding: 0.5rem;
+  border-bottom: 1px solid #c7c7c7;
+}
+
+#calendar-content ul li {
+  position: absolute;
+  height: 3.33rem;
+  width: calc(100% - 6rem);
+  padding: 0.5rem;
+  color: white;
+  background-color: blue;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
