--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -6,7 +6,21 @@
     <div class="nav-placeholder"></div>
     <div class="container">
         <h3 class="h3 text-center">Schedule an Appointment</h3>
-        <div id="calendar"></div>
+        <div id="calendar">
+            <div id="calendar-controls">
+                <div class="button inactive">
+                    <i class="fas fa-arrow-left"></i>
+                </div>
+                <div class="date text-center">
+                    <span>Today, {{ date|date:"n/j" }}</span>
+                    <i class="far fa-calendar-alt"></i>
+                </div>
+                <div class="button">
+                    <i class="fas fa-arrow-right"></i>
+                </div>
+            </div>
+            <div id="calendar-content"></div>
+        </div>
     </div>
 </div>
 {% endblock %}
