--- a/booking/templates/booking/month_picker.html
+++ b/booking/templates/booking/month_picker.html
@@ -1,4 +1,18 @@
-<div id="month-picker">
+<div id="date-picker">
+    <div class="close">
+        <span>&times;</span>
+    </div>
+    <div id="date-picker-controls">
+        <div class="button inactive">
+            <i class="fas fa-arrow-left"></i>
+        </div>
+        <div class="text-center">
+            <span>{{ date|date:"M. Y" }}</span>
+        </div>
+        <div class="button">
+            <i class="fas fa-arrow-right"></i>
+        </div>
+    </div>
     <ol class="weeks">
         {% for week in weeks %}
         <li>
