--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<div id="date-picker"></div>
 <div class="page">
     <div class="nav-placeholder"></div>
     <div class="container">
