--- a/booking/static/booking/css/date_picker.css
+++ b/booking/static/booking/css/date_picker.css
@@ -70,6 +70,11 @@
   grid-row: 1 / span 6;
   height: 10.25rem;
 }
+
+#date-picker .grid div.prev {
+  grid-column: 1 / span 1;
+}
+
 #date-picker .grid div.next {
   grid-column: 9 / span 1;
 }
