--- a/booking/static/booking/css/date_picker.css
+++ b/booking/static/booking/css/date_picker.css
@@ -33,9 +33,8 @@
   right: -1rem;
   width: 1.5rem;
   height: 1.5rem;
-  background-color: red;
-  border-radius: 50%;
-  font: 16pt Arial;
+  background: url('/static/booking/img/close.png');
+  text-indent: -9999px;
   opacity: 1;
 }
 
