--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,23 +2,19 @@
 {% load static %}
 
 {% block content %}
-<div class="nav-placeholder d-xl-none"></div>
-<div class="chevron d-none d-xl-block">
-    <h1><i class="fas fa-chevron-down"></i></h1>
-</div>
 <div class="cover">
     <div class="title">
         <h3>Robin McCarthy</h3>
         <h1>The Pharmasseuse</h1>
     </div>
-    <div class="chevron d-none d-xl-block">
-        <h1><i class="fas fa-chevron-down"></i></h1>
-    </div>
+</div>
+<div class="chevron">
+    <h1 class="h1"><i class="fas fa-chevron-down"></i></h1>
 </div>
 <div class="content">
     <div class="container m-tb-2rem">
         <div class="row">
-            <div class="col col-md-6 d-none d-md-block img">
+            <div class="col col-12 col-md-6 img">
                 <img src="{% static 'home/img/pills.jpg' %}" alt="pills">
             </div>
             <div class="paragraph col col-md-6 col-sm-12">
@@ -27,6 +23,9 @@
             </div>
         </div>
         <div class="row">
+            <div class="col col-12 d-md-none img">
+                <img src="{% static 'home/img/massage.jpg' %}" alt="massage">
+            </div>
             <div class="paragraph col col-md-6 col-sm-12">
                 <div class="gradient-border"></div>
                 <p class="text-md-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ex sit amet enim tincidunt aliquet vehicula eu neque. Morbi condimentum, odio a interdum interdum, urna velit hendrerit nunc, vitae ornare massa metus nec leo. Sed aliquet feugiat sagittis.</p>
