Updated GDPR message

--- a/home/templates/home/gdpr.html
+++ b/home/templates/home/gdpr.html
@@ -1,6 +1,6 @@
 <div class="banner">
     <div class="container">
         <a id="close">&times;</a>
-        <p>This site uses cookies for essential functions, such as tracking items in your shopping cart. By continuing, you agree to our <a href="{% url 'home:privacy' %}">Privacy Policy</a>.</p>
+        <p>This site uses cookies for essential functions. By continuing, you agree to our <a href="{% url 'home:privacy' %}">Privacy Policy</a>.</p>
     </div>
 </div>
