Updated MIME types

--- a/booking/templates/booking/base.html
+++ b/booking/templates/booking/base.html
@@ -32,8 +32,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/navbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'booking/css/date_picker.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'booking/css/style.css' %}">
-    <script src="{% static 'booking/js/date_picker.js' %}"></script>
-    <script src="{% static 'booking/js/script.js' %}"></script>
+    <script type="text/javascript" src="{% static 'booking/js/date_picker.js' %}"></script>
+    <script type="text/javascript" src="{% static 'booking/js/script.js' %}"></script>
 </head>
 <body>
     {% include 'home/navbar.html' %}
