--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -33,9 +33,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/footer.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/gdpr.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}">
-    <script src="{% static 'home/js/cookies.js' %}"></script>
-    <script src="{% static 'home/js/gdpr.js' %}"></script>
-    <script src="{% static 'home/js/script.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/cookies.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/gdpr.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/script.js' %}"></script>
 </head>
 <body>
     {% include 'home/navbar.html' %}
