--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -6,7 +6,7 @@
 <div class="page">
     <div class="nav-placeholder"></div>
     <div class="container">
-        <h3 class="h3 text-center">Schedule an Appointment</h3>
+        <h3 class="h3 title text-center">Schedule an Appointment</h3>
         <div id="calendar">
             <div id="calendar-controls">
                 <div class="button inactive">
