--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -1,46 +1,78 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Varela+Round');
 
+.h1, .h3 {
+  font-family: 'Varela Round', Arial, sans-serif
+}
+
 .page {
-    min-height: 100vh;
-    background-color: #ffcc8d;
-    background:
-        linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
-        linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
-        linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
-    background:
-        -webkit-linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
-        -webkit-linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
-        -webkit-linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
-    background:
-        -moz-linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
-        -moz-linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
-        -moz-linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
-    background:
-        -ms-linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
-        -ms-linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
-        -ms-linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
-    background:
-        -o-linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
-        -o-linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
-        -o-linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
-    padding: 1rem 0;
+  min-height: 100vh;
+  background-color: #ffcc8d;
+  background:
+    linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
+    linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
+    linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
+  background:
+    -webkit-linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
+    -webkit-linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
+    -webkit-linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
+  background:
+    -moz-linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
+    -moz-linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
+    -moz-linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
+  background:
+    -ms-linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
+    -ms-linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
+    -ms-linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
+  background:
+    -o-linear-gradient(127deg, rgba(90,181,255,1), rgba(90,181,255,0) 70.71%),
+    -o-linear-gradient(217deg, rgba(255,181,90,1), rgba(255,181,90,0) 70.71%),
+    -o-linear-gradient(336deg, rgba(181,255,90,1), rgba(181,255,90,0) 70.71%);
+  padding: 1rem 0;
 }
 
 .page .container {
-    background: #ffffff7f;
-    padding: 1rem;
+  background: #ffffff7f;
+  padding: 1rem;
 }
 
 .alert {
-    font-family: 'Open Sans', Arial, sans-serif;
+  font-family: 'Open Sans', Arial, sans-serif;
 }
 
 .alert .close {
-    position: absolute;
-    top: 7px;
-    right: 0.5rem;
+  position: absolute;
+  top: 7px;
+  right: 0.5rem;
 }
 
-.h1 {
-    font-family: 'Varela Round', Arial, sans-serif
+.contact-header > * {
+  display: inline-block;
+}
+
+.edit {
+  padding-left: 1em;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
+.info {
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: 49.8% 49.8%;
+  grid-template-columns: calc((100% - 1rem)/2) calc((100% - 1rem)/2);
+  width: 100%;
+  margin: 1rem 0;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+  line-height: 1.25;
+}
+
+.info > div {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.info > div:nth-child(2n + 1) {
+  text-align: right;
+  font-style: italic;
+  padding-right: 1px;
 }
