--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -21,6 +21,32 @@
         {% endfor %}
         {% endif %}
         <h1 class="h1">Profile</h1>
+        {% if person == None %}
+        {% else %}
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <div class="contact-header">
+                    <h3 class="h3">Contact Information</h3>
+                    <div class="edit">
+                        <a href="#">Edit</a>
+                    </div>
+                </div>
+                <div class="info">
+                    <div>Name</div>
+                    <div>{{ person.first_name }} {{ person.last_name }}</div>
+                    <div>Phone Number</div>
+                    <div>XXX-XXX-XXXX</div>
+                    <div>Email</div>
+                    <div>{{ person.email }}</div>
+                    <div>Password</div>
+                    <div>&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull; <a href="#">Change</a></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <h3 class="h3">Next Appointment</h3>
+            </div>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
