--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -20,24 +20,53 @@
         {% endif %}
         {% endfor %}
         {% endif %}
-        <h1 class="h1">Profile</h1>
-        {% if person == None %}
+        {% if profile == None %}
+        <h1 class="h1">Sign In</h1>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h3 class="h3">Login</h3>
+                <form action="{% url 'users:login' %}" method="POST">
+                    <div class="modal-body">
+                        {% csrf_token %}
+                        <input type="text" name="email" placeholder="Email" class="form-control">
+                        <input type="password" name="password" placeholder="Password" class="form-control">
+                        <input type="submit" class="btn btn-primary" value="Login">
+                    </div>
+                </form>
+            </div>
+            <div class="col-12 col-md-6">
+                <h3 class="h3">Register</h3>
+                <form action="{% url 'users:register' %}" method="POST">
+                    <div class="modal-body">
+                        {% csrf_token %}
+                        <input type="text" name="firstName" placeholder="First Name" class="form-control">
+                        <input type="text" name="lastName" placeholder="Last Name" class="form-control">
+                        <input type="text" name="email" placeholder="Email" class="form-control">
+                        <input type="text" name="phone" placeholder="Phone" class="form-control">
+                        <input type="password" name="password" placeholder="Password" class="form-control">
+                        <input type="password" name="confirmPassword" placeholder="Confirm Password" class="form-control">
+                        <input type="submit" class="btn btn-primary" value="Register">
+                    </div>
+                </form>
+            </div>
+        </div>
         {% else %}
+        <h1 class="h1">Profile</h1>
         <div class="row">
             <div class="col-12 col-md-6">
                 <div class="contact-header">
-                    <h3 class="h3">Contact Information</h3>
+                    <h3 class="h3">Personal Information</h3>
                     <div class="edit">
                         <a href="#">Edit</a>
                     </div>
                 </div>
                 <div class="info">
                     <div>Name</div>
-                    <div>{{ person.first_name }} {{ person.last_name }}</div>
+                    <div>{{ profile.user.first_name }} {{ profile.user.last_name }}</div>
                     <div>Phone Number</div>
-                    <div>XXX-XXX-XXXX</div>
+                    <div>{{ profile.phone }}</div>
                     <div>Email</div>
-                    <div>{{ person.email }}</div>
+                    <div>{{ profile.user.email }}</div>
                     <div>Password</div>
                     <div>&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull; <a href="#">Change</a></div>
                 </div>
