--- a/home/templates/home/navbar.html
+++ b/home/templates/home/navbar.html
@@ -1,4 +1,5 @@
 <nav id="navbar" class="navbar fixed-top navbar-expand-md navbar-dark">
+    <a class="navbar-brand" href="{% url 'home:index' %}">The Pharmasseuse</a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
     </button>
@@ -16,10 +17,10 @@
             </li>
             {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'users:logout' %}" title="Sign Out">Sign Out</a>
+                <a class="nav-link" href="{% url 'users:index' %}" title="Profile">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'users:index' %}" title="Profile">Profile</a>
+                <a class="nav-link" href="{% url 'users:logout' %}" title="Sign Out">Sign Out</a>
             </li>
             {% endif %}
         </ul>
