Added functionality to add multiple appointment slots at once; populated day view with available appointment slots

--- a/booking/templates/booking/day.html
+++ b/booking/templates/booking/day.html
@@ -4,7 +4,7 @@
     {% endfor %}
 </ol>
 <ul>
-    <li data-hour="8">8:00 am&ndash;8:50 am</li>
-    <li data-hour="12">12:00 pm&ndash;12:50 pm</li>
-    <li data-hour="13">1:00 pm&ndash;1:50 pm</li>
+    {% for slot in slots %}
+    <li data-hour="{{ slot.hour }}">{{ slot.start }}&ndash;{{ slot.end }}</li>
+    {% endfor %}
 </ul>
